--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "discrete-fourier"
-version = "0.2.0"
-description = "Tool to calculate discrete Fourier coefs and analyze periodic patterns"
+version = "0.3.0"
+description = "Calculate discrete Fourier coefficients, detect periods, and validate periodic patterns"
 authors = [
     {name = "Ricardo Marcelo Alvarez",email = "rmalvarezkai@gmail.com"}
 ]
